# ci-cd-pipeline

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  graphic-schema.excalidraw  main.py  pyproject.toml  requirements.txt
.github/workflows/: main.yml
src/: runner.py
src/data_ingestion/: runner.py
src/data_ingestion/config/: env_settings.py  settings.py
src/data_ingestion/extract/: access_token.py  api_extract.py  base.py  reddit.py
src/data_ingestion/ingestors/: base.py  reddit.py
src/data_ingestion/load/: aws_s3.py  data_load.py  s3_key.py
src/data_ingestion/tests/test_extract/: test_access_token.py  test_api_extract.py
src/data_ingestion/utils/: logger.py
tests/data_ingestion/extract/: test_reddit.py
tests/data_ingestion/ingestors/: test_reddit_ingestor.py
tests/data_ingestion/load/: test_aws_s3.py  test_s3_key.py
tests/test_extract/: test_api_extract.py
