[project]
name = "cryptocore"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3==1.42.46",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pytest==8.4.2",
    "python-dotenv==1.2.1",
    "requests==2.32.5",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "moto>=5.1.22",
    "pytest-mock>=3.15.1",
]

[tool.ruff.format]
quote-style = "single"
